--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,9 +31,10 @@
                     </li>
                     <li class="nav-item d-none" id="adminNavItem">
                         <a class="nav-link" href="/admin">Admin</a>
-                    </li>                      
+                    </li>
                     <li class="nav-item">
-                        <button onclick="logout()" class="btn btn-outline-danger btn-sm" id="logoutButton">Sign Out</button>
+                        <button onclick="logout()" class="btn btn-outline-danger btn-sm" id="logoutButton">Sign
+                            Out</button>
                     </li>
                 </ul>
             </div>
